[project]
name = "threadsafe-async"
version = "0.1.0"
authors = [
    {name = "Vladimir Perekladov", email = "gleero@gmail.com"},
]
description = "Thread-safe synchronization primitives"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["."]

[tool.isort]
src_paths = ["tsasync", "test"]
profile = "black"
line_length = 120
include_trailing_comma = "True"
multi_line_output = 3
force_grid_wrap = 0
combine_as_imports = "True"
lines_after_imports = 2

[tool.flake8]
exclude = [".git", ".venv", ".idea", ".pytest_cache", "__pycache__"]
max-line-length = 120
