[project]
name = "threadsafe-async"
version = "0.1.1"
authors = [
    {name = "Vladimir Perekladov", email = "gleero@gmail.com"},
]
description = "Thread-safe synchronization primitives"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]

[project.optional-dependencies]
dev = [
    "black==23.3.0",
    "flake8==6.0.0",
    "Flake8-pyproject==1.2.3",
    "isort==5.12.0",
    "twine==4.0.2",
    "build==0.10.0",
]
test = [
    "pytest==7.3.0",
    "pytest-asyncio==0.21.0",
    "pytest-cov==4.0.0",
]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.distutils.bdist_wheel]
universal = true

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
pythonpath = ["."]

[tool.isort]
src_paths = ["tsasync", "test"]
profile = "black"
line_length = 72
include_trailing_comma = "True"
multi_line_output = 3
force_grid_wrap = 0
combine_as_imports = "True"
lines_after_imports = 2

[tool.flake8]
exclude = [".git", ".venv", ".idea", ".pytest_cache", "__pycache__"]
max-line-length = 72
